VZDEV/src/objects/CCPM_Store__c.object
<CustomObject>
    <description>Object to hold details of store (Store ID, Phone, Long Code, Address)</description>
    <fields>
        <fullName>CCPM_IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag  to indicate if store is active or not</description>
        <label>Active ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CCPM_TimeZone__c</fullName>
        <description>TimeZones of the store to identify business hours for sending outbound communication</description>
        <label>TimeZone</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>EST</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>CST</fullName>
                </value>
                <value>
                    <fullName>MST</fullName>
                </value>
                <value>
                    <fullName>PST</fullName>
                </value>
                <value>
                    <fullName>HAST</fullName>
                </value>
                <value>
                    <fullName>AKST</fullName>
                </value>
                <value>
                    <fullName>Alaskan</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Hawaiian</fullName>
                    <isActive>false</isActive>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CCPM_city__c</fullName>
        <label>City</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCPM_country__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>USA</fullName>
                    <default>true</default>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CCPM_district__c</fullName>
        <description>The district store belongs to</description>
        <label>District</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCPM_fridayOpenFrom__c</fullName>
        <label>Friday (Open From)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>CCPM_openingAndClosingTimeRange</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CCPM_fridayOpenTill__c</fullName>
        <label>Friday (Open Till)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>CCPM_openingAndClosingTimeRange</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CCPM_longcode__c</fullName>
        <description>Long code #  through which SMS messages will be sent</description>
        <label>Long Code</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>CCPM_market__c</fullName>
        <description>The market store belongs to</description>
        <label>Market</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCPM_mondayOpenFrom__c</fullName>
        <label>Monday(Open From)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>CCPM_openingAndClosingTimeRange</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CCPM_mondayOpenTill__c</fullName>
        <label>Monday(Open Till)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>CCPM_openingAndClosingTimeRange</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CCPM_peopleSoftLocationCode__c</fullName>
        <description>Acts as a foreign key to Store; mapped to GL_Location in Peoplesoft; Also called pos_loc_cd in Data warehouse Outlet (store) data</description>
        <externalId>true</externalId>
        <label>PeopleSoft Location Code</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CCPM_phone__c</fullName>
        <description>Contact number of the store</description>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>CCPM_recommendedVisitingHours__c</fullName>
        <description>Recommended visiting hours to be included in initial &amp; follow-up sms</description>
        <label>Recommended Visiting Hours</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCPM_saturdayOpenFrom__c</fullName>
        <label>Saturday(Open From)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>CCPM_openingAndClosingTimeRange</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CCPM_saturdayOpenTill__c</fullName>
        <label>Saturday(Open Till)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>CCPM_openingAndClosingTimeRange</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CCPM_source__c</fullName>
        <description>This field contains source of store which markets store belongs  i.e Retail or Telesales</description>
        <label>Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCPM_state__c</fullName>
        <label>State/Province</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCPM_storeEcode__c</fullName>
        <label>Store Ecode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCPM_storeID__c</fullName>
        <description>Unique Id of the store (data mastered in KRONOS)</description>
        <externalId>true</externalId>
        <label>Store ID</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CCPM_storeLocation__c</fullName>
        <description>Latitude &amp; longitude location of store</description>
        <label>Store Location</label>
        <scale>6</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>CCPM_street__c</fullName>
        <label>Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCPM_sundayOpenFrom__c</fullName>
        <label>Sunday(Open From)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>CCPM_openingAndClosingTimeRange</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CCPM_sundayOpenTill__c</fullName>
        <label>Sunday(Open Till)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>CCPM_openingAndClosingTimeRange</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CCPM_territory__c</fullName>
        <description>The territory store belongs to</description>
        <label>Territory</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCPM_thursdayOpenFrom__c</fullName>
        <label>Thursday(open From)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>CCPM_openingAndClosingTimeRange</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CCPM_thursdayOpenTill__c</fullName>
        <label>Thursday(open Till)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>CCPM_openingAndClosingTimeRange</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CCPM_tuesdayOpenFrom__c</fullName>
        <label>Tuesday(Open From)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>CCPM_openingAndClosingTimeRange</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CCPM_tuesdayOpenTill__c</fullName>
        <label>Tuesday(Open Till)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>CCPM_openingAndClosingTimeRange</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CCPM_wednesdayOpenFrom__c</fullName>
        <label>Wednesday(Open From)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>CCPM_openingAndClosingTimeRange</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CCPM_wednesdayOpenTill__c</fullName>
        <label>Wednesday(Open Till)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>CCPM_openingAndClosingTimeRange</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CCPM_zipcode__c</fullName>
        <label>Zip Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Store</label>
    <nameField>
        <label>Store Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Stores</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>